--- a/css/dingdanzx.css
+++ b/css/dingdanzx.css
@@ -2,37 +2,138 @@
 * @Author: che
 * @Date:   2018-08-13 11:24:28
 * @Last Modified by:   che
-* @Last Modified time: 2018-08-17 00:00:30
+* @Last Modified time: 2018-09-29 14:24:30
 */
+h2{
+	font-size: 0.3rem !important;
+}
 header{
-	width: 7.5rem;
-	height: 13.34rem;
-	background-image: url('../img/51.png');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center -0.4rem;
-	margin: 0 auto;
+	width: 100%;
+	height: 1.06rem;
+	background:-webkit-linear-gradient(left,rgb(243,214,56),rgba(247,149,44,0.89));
+	border-radius:0.06rem;
+}
+.container{
+	width:100%;
+	height: 1rem;
+	padding:0.15rem 0.24rem;
+	margin:0 auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+}
+.header_left{
+	width:0.5rem;
+	height: 0.5rem;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 0.5rem;
+	color:rgb(245,195,62);
+	font-size: 0.26rem;
+	background: #fff;
+}
+.header_middle{
+	padding-top:0.06rem;
+	font-size: 0.3rem;
+	color:#fff;
 }
 footer{
 	margin-top: 0.5rem;
 	width: 100%;
-	background-image: url('../img/18.png');
+	/* background-image: url('../img/18.png'); */
 	position: fixed;
 	bottom: 0;
 	margin: 0 auto;
+	box-shadow: 0 0.06rem 0.2rem  0.06rem orange;
+}
+.lishi{
+	padding:0.2rem 0.24rem;
+}
+.lishi p{
+	font-size: 0.24rem;
+	color:rgb(243,214,56);
+	font-weight: bold;
+}
+.shangjia{
+	font-size: 0.24rem;
+	padding:0.2rem 0.24rem 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 
+}
+.shangjia .left{
+	box-shadow: 0 0.04rem 0.02rem 0.04rem rgba(247,193,27,0.3);
+	padding:0.2rem 0 0;
+	width: 3.38rem;
+	height: 4rem;
+}
+.shangjia .left p{
+	color:rgba(0,0,0,0.4);
+}
+.shangjia .bottom{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 
+}
+.order{
+	padding:0 0.24rem;
+	font-size: 0.24rem;
+
+}
+.order ul li{
+	display: flex;
+	box-shadow: 0 0.04rem 0.02rem 0.04rem rgba(247,193,27,0.3);
+	position: relative;
+	margin-bottom: 0.28rem;
+
+}
+.order ul li .left{
+	text-align: center;
+	display: flex;
+	align-items: center;
+	width: 30%;
+}
+.order ul li .right{
+	padding:0.2rem 0.1rem;
+
+}
+.order_box{
+	position: absolute;
+	top:0;
+	bottom:0;
+	right:0;
+	padding:0.4rem 0.2rem;
+
+}
+.order_box .pingjia{
+	padding:0.1rem 0.5rem;
+	color:rgb(255,0,66);
+	font-size: 0.24rem;
+	border-radius: 0.4rem;
+	box-shadow: 0 0.04rem 0.02rem 0.04rem rgba(247,193,27,0.3);
+	margin-bottom:0.2rem;
+	text-align: center;
 }
 footer .bottom{
 	width: 7rem;
 	height: 1.2rem;
 	
 	margin: 0 auto;
-	padding-top: 0.2rem;
+	/* padding-top: 0.2rem; */
 }
 footer .bottom ul{
 	display: flex;
 	flex-direction: row;
+}
+footer .bottom ul a{
+	width: 25%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 footer .bottom ul li{
 	width: 25%;
@@ -45,8 +146,8 @@ footer .bottom ul li{
 
 }
 footer .bottom ul li img{
-	width: 0.42rem;
-	height: 0.42rem;
+	width: 0.4rem;
+	height: 0.4rem;
 }
 footer .bottom ul li .shouye{
 	width: 0.4rem;
@@ -57,16 +158,16 @@ footer .bottom ul li .faxian{
 	height: 0.4rem;
 }
 footer .bottom ul li .dingdan{
-	width: 0.36rem;
+	width: 0.4rem;
 	height: 0.4rem;
 }
 footer .bottom ul li .wode{
-	width: 0.38rem;
+	width: 0.4rem;
 	height: 0.4rem;
 }
 footer .bottom ul li span{
-	width: 0.36rem;
+	/* width: 0.36rem; */
 	height: 0.24rem;
 	font-size: 0.18rem;
-	margin-top: 0.1rem;
+	margin-top: 0.04rem;
 }
