--- a/css/base.css
+++ b/css/base.css
@@ -2,18 +2,22 @@
 * @Author: che
 * @Date:   2018-08-09 10:35:34
 * @Last Modified by:   che
-* @Last Modified time: 2018-08-09 10:42:26
+* @Last Modified time: 2018-11-02 17:47:12
 */
-*{
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
 }
-a{
-	text-decoration: none;
-	color:#000;
+
+a {
+    text-decoration: none;
+    color: #000;
+    -webkit-tap-highlight-color: transparent;
 }
-i{
-	font-style: normal;
+
+i {
+    font-style: normal;
 }
